# ethyca

./: .gitignore  DEPLOY.md  README.md  README_DEV.md  README_LOCAL.md  env.json  pyproject.toml  requirements.txt  samconfig.toml  template.yaml
.github/workflows/: ci.yml  deploy.yaml
app/: app.py
app/models/: __init__.py  board.py  exceptions.py  game.py
app/models/enums/: game_status.py  player.py
app/models/requests/: game_move_request.py  move.py
app/models/responses/: base_response.py  exception_response.py  game_response.py  games_list_response.py
app/services/: __init__.py  dynamodb_game_repository.py  game_repository.py  game_service.py
app/static/: index.html
tests/functional/: test_app.py
tests/unit/: test_board.py  test_game.py
